--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
 
     <section id="banner">
-        <img src="img/chiclete.png">
+        <img src="img/bannerinicial.png">
     </section>
 
     <section id="pagina-inicial" class="homepage">
